--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -66,6 +66,7 @@ body {
     justify-content: space-between;
     height: 100vh;
     width: 6%;
+    transition: width 2s;
     background-color: var(--background);
 }
 
@@ -145,8 +146,14 @@ body {
     justify-content: flex-start;
 }
 
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
 .terminal-tab {
     width: 7.2rem;
+    transition: width 5s;
     height: 1.9vh;
     margin-top: 1.2vh;
     margin-right: 0.9vh;
@@ -156,6 +163,7 @@ body {
     justify-content: space-between;
     align-items: center;
     border-radius: 4px;
+    animation: fadeIn 0.5s;
 }
 
 .terminal-tab>span {
@@ -196,6 +204,15 @@ body {
     display: flex;
     flex: 1;
     overflow: hidden;
+}
+
+.terms-tabs-none{
+    color: var(--active-bg);
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    font-size: xx-large;
 }
 
 /* Login Page */
