--- a/ui/src/app/components/terminal-controls/terminal-controls.component.html
+++ b/ui/src/app/components/terminal-controls/terminal-controls.component.html
@@ -1,6 +1,12 @@
 <div class="terminal-control flex-row">
-  <div *ngFor="let term of terminalWindows" class="terminal-tab" [ngClass]="{'active-bg' : activeTerminalId === term.id,
-     'inactive-bg' : activeTerminalId !== term.id}" (click)="setTerminalActive(term.id)">
+  <div *ngFor="let term of terminalWindows" class="terminal-tab" 
+  
+    [ngClass]="
+      {'active-bg' : activeTerminalId === term.id,
+      'inactive-bg' : activeTerminalId !== term.id,
+      'terminal-tab-closed': closedTermTab==term.id}" 
+     
+     (click)="setTerminalActive(term.id)">
     <span>{{getTerminalName(term.id)}}</span>
     <img src="../assets/icons/close.svg" alt="" (click)="removeTerminal(term.id)">
   </div>
