--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -271,13 +271,13 @@ body {
 }
 
 .terminal {
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     display: flex;
     flex-grow: 1;
 }
 
-#terminals-container {
+.terminals-container {
     height: 95vh;
     display: flex;
     flex: 1;
