--- a/ui/src/app/pages/desktop-view/desktop-view.component.html
+++ b/ui/src/app/pages/desktop-view/desktop-view.component.html
@@ -1,3 +1,3 @@
 <div class="flex-col">
-    <iframe class="desktop-view" src="../../../assets/xpra_client/html5/index.html?path=/xpraws&password=abc" frameborder="0"></iframe>
+    <iframe *ngIf="ShowFrame" class="desktop-view" [src]="IframeURL" frameborder="0"></iframe>
 </div>
