Term Resize Fixes

--- a/ui/src/app/components/terminal/xterm.css
+++ b/ui/src/app/components/terminal/xterm.css
@@ -103,7 +103,8 @@
 }
 
 .xterm .xterm-screen {
-    position: relative;
+    /* position: relative; */
+    position: fixed;
 }
 
 .xterm .xterm-screen canvas {
