Enable Creation of New Instances

--- a/ui/src/app/components/help-dialog/help-dialog.component.html
+++ b/ui/src/app/components/help-dialog/help-dialog.component.html
@@ -34,7 +34,7 @@
             using the password <b><i>segfault</i></b>
           </li>
           <li>
-            Once logged in you'll be shown a secret, that you can use to 
+            Once logged in you'll be shown a secret, which you can use to 
             access your instance.
           </li>
         </ul>
