Indicate Xpra is loading

--- a/ui/src/app/pages/ports-view/ports-view.component.html
+++ b/ui/src/app/pages/ports-view/ports-view.component.html
@@ -1,5 +1,5 @@
 <div class="terminals-container">
-    <div class="terminal-tabs-none">
+    <div class="page-info-text">
         You will be able to view and control ports on your SF instance here.(very soon :-) )
     </div>
 </div>
