--- a/ui/src/app/pages/terminal-view/terminal-view.component.html
+++ b/ui/src/app/pages/terminal-view/terminal-view.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <div *ngIf="terminalWindows.length==0" class="terminals-container">
-    <div  class="terminal-tabs-none">
+    <div  class="page-info-text">
         No Open Terminals, Go Ahead Open A New One!
     </div>
 </div>
