--- a/ui/src/app/pages/web-view/web-view.component.html
+++ b/ui/src/app/pages/web-view/web-view.component.html
@@ -1,5 +1,5 @@
 <div class="terminals-container">
-    <div class="terminal-tabs-none">
+    <div class="page-info-text">
         You will be able to upload and mange your onion site here.(very soon :-) )
     </div>
 </div>
