--- a/ui/src/app/pages/desktop-view/desktop-view.component.html
+++ b/ui/src/app/pages/desktop-view/desktop-view.component.html
@@ -1,3 +1,6 @@
 <div class="flex-col">
+    <div class="page-info-text loading-xpra-indicator">
+        Loading Xpra Client...
+    </div>
     <iframe *ngIf="ShowFrame" class="desktop-view" [src]="IframeURL" frameborder="0"></iframe>
 </div>
