--- a/ui/src/app/components/help-dialog/help-dialog.component.html
+++ b/ui/src/app/components/help-dialog/help-dialog.component.html
@@ -26,7 +26,7 @@
       </li>
       <br>
       <li>
-        <b>Obtaining The Secret</b>
+        <b>Using Segfault CLI</b>
         <ul class="sub-list">
           <li>
             Use you favourite SSH client and connect to segfault.net, example 
@@ -41,8 +41,8 @@
       </li>
       <br>
       <li>
-        <b>SegfaultUI (this site)</b>
-        <p>SegfaultUI is a GUI frontend for the services that segfault provides.</p>
+        <b>Using SegfaultUI (this site)</b>
+        <p>SegfaultUI is a GUI frontend for the services that segfault provides, close this dialog and click new to get started.</p>
       </li>
     </ul>
   </div>
