--- a/ui/src/app/pages/dashboard/dashboard.component.html
+++ b/ui/src/app/pages/dashboard/dashboard.component.html
@@ -28,7 +28,8 @@
     <section class="content-view flex-col">
       <terminal-view [ngClass]="{'hidden': activeMenu!='terminal'}"></terminal-view>
       <desktop-view [ShowFrame]="desktopRequested" [ngClass]="{'hidden': activeMenu!='desktop'}"></desktop-view>
-      <ports-view [ngClass]="{'hidden': activeMenu!='ports'}"></ports-view>
-      <web-view [ngClass]="{'hidden': activeMenu!='web'}"></web-view>
+      <!-- <ports-view [ngClass]="{'hidden': activeMenu!='ports'}"></ports-view> -->
+      <!-- <web-view [ngClass]="{'hidden': activeMenu!='web'}"></web-view> -->
+      <files-view [ShowFrame]="filesRequested" [ngClass]="{'hidden': activeMenu!='files'}"></files-view>
     </section>
   </div>
