--- a/ui/src/app/pages/terminal-view/terminal-view.component.html
+++ b/ui/src/app/pages/terminal-view/terminal-view.component.html
@@ -1,4 +1,4 @@
-<div class="flex-row">
+<div class="flex-row top-bar">
     <div class="menu-brand menu-brand-small flex-col" *ngIf="showLogo">
         <h6>SF</h6>
         <span>by hackerschoice</span>
